# pop-leave

./: .gitignore  README.md  pyproject.toml  template.docx
popleave/: __init__.py  popleave.py  template.docx
src/: populate.py
