[tool.poetry]
name = "leave-populator"
version = "0.1.0"
description = "Populates Staff Leave Forms from the Command Line"
authors = ["Alex Drysdale <alexander.drysdale@wales.nhs.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-docx = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
